# combined_nav

./: CMakeLists.txt  README.md
config/: combined_nav.ini
plot-matlab/: compare_with_rtk.m  myres_comp_with_ref.m  posming_compare.m
src/: CMakeLists.txt  backward_LCI.cpp  forward_LCI.cpp  fused_LCI.cpp  realtime_file_sender.cpp  realtime_forward_LCI.cpp
src/COMBINED/: CMakeLists.txt  alignment.cpp  alignment.h  lci_config_helper.h  lci_filter.cpp  lci_filter.h  lci_runner.cpp  lci_runner.h  realtime_file_sender.cpp  realtime_file_sender.h  realtime_forward_runner.cpp  realtime_forward_runner.h  realtime_stream.cpp  realtime_stream.h
src/COMMON/: Attitude.cpp  Attitude.h  CMakeLists.txt  MyTime.h  const_info.cpp  const_info.h  navState.h
src/GNSS/: CMakeLists.txt  gnssData.h  gnssFileLoader.cpp  gnssFileLoader.h
src/IMU/: CMakeLists.txt  fileLoader.cpp  fileLoader.h  filesaver.cpp  filesaver.h  inerNav.cpp  inerNav.h
